[project]
name = "pyaqua3ddev"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher L. Crutchfield",email = "ccrutchf@ucsd.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "scikit-image (>=0.25.1,<0.26.0)",
    "rawpy (>=0.24.0,<0.25.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)"
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
